name:                project-ghost
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Domain.API
                     , Domain.Character.Algebra
                     , Domain.Character.Lua
                     , Domain.Character.Random
                     , Domain.Character.Postgres
                     , Domain.Game.Algebra
                     , Domain.Game.Random
                     , Domain.Game.Quests
                     , Domain.Game.Postgres
                     , Domain.Quest.Algebra
                     , Domain.Quest.Postgres
                     , Domain.Resource.Algebra
                     , Domain.User.Algebra
                     , Domain.User.Postgres
                     , Utility.Aeson.Lua
                     , Utility.Postgres
                     , Utility.Lua
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , hslua == 0.6.0
                     , microlens-platform
                     , MonadRandom
                     , mtl
                     , postgresql-simple
                     , resource-pool
                     , scientific
                     , text
                     , unordered-containers
                     , uuid
                     , vector
  default-language:    Haskell2010

executable webserver
  hs-source-dirs:      webserver
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , http-types
                     , mtl
                     , path-pieces
                     , postgresql-simple
                     , resource-pool
                     , project-ghost
                     , text
                     , uuid
                     , wai
                     , wai-routes
                     , warp
  default-language:    Haskell2010

executable viewer
  hs-source-dirs:      viewer
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , blaze-html
                     , microlens-platform
                     , project-ghost
                     , text
                     , uuid
                     , wai
                     , wai-routes
                     , warp
                     , wreq
  default-language:    Haskell2010

test-suite project-ghost-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-ghost
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/project-ghost
